[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/test_mob.png" type="Texture" id=1]
[ext_resource path="res://scenes/MobScene.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="MobScene" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="HpIndicator" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -22.0
margin_right = 20.0
margin_bottom = -18.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageIndicator" type="ColorRect" parent="HpIndicator"]
margin_left = 1.0
margin_top = 1.0
margin_right = 39.0
margin_bottom = 3.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeIndicator" type="ColorRect" parent="HpIndicator"]
margin_left = 1.0
margin_top = 1.0
margin_right = 39.0
margin_bottom = 3.0
color = Color( 0.0313726, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]
width = 3.0
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
